--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
+    <div id="menu_header">
+      <ol>
+        <li><%= link_to "Authors Index", authors_path %></li>
+        <li><%= link_to "Books Index", books_path %></li>
+      </ol>
+    </div>
     <%= yield %>
   </body>
 </html>
